# solid-pod-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GAP-ANALYSIS.md  NOTICE  PARITY-CHECKLIST.md  README.md  RELEASE_NOTES.md  deny.toml
crates/solid-pod-rs/: CHANGELOG.md  Cargo.toml  GAP-ANALYSIS.md  PARITY-CHECKLIST.md  README.md  SECURITY.md
crates/solid-pod-rs-activitypub/: Cargo.toml  README.md
crates/solid-pod-rs-activitypub/src/: actor.rs  delivery.rs  discovery.rs  error.rs  http_sig.rs  inbox.rs  lib.rs  outbox.rs  store.rs
crates/solid-pod-rs-didkey/: Cargo.toml
crates/solid-pod-rs-didkey/src/: did.rs  error.rs  jwt.rs  lib.rs  pubkey.rs  verifier.rs
crates/solid-pod-rs-didkey/tests/: jwt_verify.rs  roundtrip.rs
crates/solid-pod-rs-git/: Cargo.toml  README.md
crates/solid-pod-rs-git/src/: auth.rs  config.rs  error.rs  guard.rs  lib.rs  service.rs
crates/solid-pod-rs-git/tests/: git_service_sprint10.rs
crates/solid-pod-rs-idp/: Cargo.toml  README.md
crates/solid-pod-rs-idp/src/: axum_binder.rs  credentials.rs  discovery.rs  error.rs  invites.rs  jwks.rs  lib.rs  passkey.rs  provider.rs  registration.rs  schnorr.rs  session.rs  tokens.rs  user_store.rs
crates/solid-pod-rs-idp/tests/: passkey_sprint11.rs  schnorr_sso_sprint11.rs
crates/solid-pod-rs-nostr/: Cargo.toml  README.md
crates/solid-pod-rs-nostr/src/: did.rs  error.rs  lib.rs  relay.rs  resolver.rs  ws.rs
crates/solid-pod-rs-nostr/tests/: relay_nip11.rs  resolver_integration.rs
crates/solid-pod-rs-server/: Cargo.toml
crates/solid-pod-rs-server/src/: lib.rs  main.rs
crates/solid-pod-rs-server/src/cli/: mod.rs
crates/solid-pod-rs-server/tests/: cli_ops_sprint11.rs  error_logging_middleware.rs
crates/solid-pod-rs/docs/: README.md
crates/solid-pod-rs/docs/adr/: ADR-057-lws10-oidc-delta.md
crates/solid-pod-rs/docs/explanation/: jss-parity-upgrade-2026-04-20-QE-ADDENDUM.md  jss-parity-upgrade-2026-04-20.md
crates/solid-pod-rs/docs/reference/: agent-integration-guide.md  jss-source-breadcrumbs.md
crates/solid-pod-rs/examples/: oidc_client.rs
crates/solid-pod-rs/src/: error.rs  interop.rs  ldp.rs  lib.rs  multitenant.rs  provision.rs  wac.rs  webid.rs
crates/solid-pod-rs/src/auth/: mod.rs  nip98.rs  self_signed.rs
crates/solid-pod-rs/src/config/: loader.rs  mod.rs  schema.rs  sources.rs
crates/solid-pod-rs/src/handlers/: legacy_notifications.rs
crates/solid-pod-rs/src/notifications/: legacy.rs  mod.rs  signing.rs
crates/solid-pod-rs/src/oidc/: jwks.rs  mod.rs  replay.rs
crates/solid-pod-rs/src/quota/: mod.rs
crates/solid-pod-rs/src/security/: cors.rs  dotfile.rs  mod.rs  rate_limit.rs  ssrf.rs
crates/solid-pod-rs/src/storage/: fs.rs
crates/solid-pod-rs/src/wac/: client.rs  conditions.rs  document.rs  evaluator.rs  issuer.rs  mod.rs  parser.rs  resolver.rs  serializer.rs
crates/solid-pod-rs/tests/: acl_origin_sprint9.rs  cid_verifier_sprint11.rs  config_size_parsing.rs  config_sprint11.rs  config_test.rs  cors_preflight.rs  did_nostr_resolver.rs  dpop_replay_test.rs  interop_jss.rs  jti_replay_sprint9.rs  ldp_headers_jss.rs  ldp_patch_create_jss.rs  ldp_range_jss.rs  ldp_slug_jss.rs  legacy_notifications_sprint11.rs  legacy_notifications_test.rs  legacy_wac_check.rs  nip98_extended.rs  nodeinfo_jss.rs  notifications_mod_direct.rs  oidc_access_token_alg.rs  oidc_dpop_signature.rs  oidc_integration.rs  oidc_jwks_ssrf.rs  oidc_mod_direct.rs  oidc_thumbprint_rfc7638.rs  quota_fs.rs  quota_race.rs  rate_limit_lru.rs  security_primitives_test.rs  server_routes_jss.rs  server_security.rs  tenancy_subdomain.rs  wac2_conditions.rs  wac2_conditions_sprint9.rs  wac_inheritance.rs  wac_parser_bounds.rs  wac_validate_for_write.rs  webhook_retry.rs  webhook_signing.rs
tests/: interop_jss.rs
