[workspace]
members = [
    "crates/solid-pod-rs",
    "crates/solid-pod-rs-server",
    "crates/solid-pod-rs-activitypub",
    "crates/solid-pod-rs-git",
    "crates/solid-pod-rs-idp",
    "crates/solid-pod-rs-nostr",
    "crates/solid-pod-rs-didkey",
]
resolver = "2"

[workspace.package]
version = "0.4.0-alpha.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/dreamlab-ai/solid-pod-rs"
homepage = "https://github.com/dreamlab-ai/solid-pod-rs"
documentation = "https://docs.rs/solid-pod-rs"
authors = ["DreamLab-AI contributors"]
rust-version = "1.75"

# Shared lints kept deliberately minimal; each crate may tighten.
# `priority = -1` keeps the group warning-level while individual lints
# below it (none currently) can override at higher priority.
[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
