[package]
name = "solid-pod-rs-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Git HTTP smart-protocol backend for solid-pod-rs, mirroring JavaScriptSolidServer's src/handlers/git.js (PARITY rows 69, 100)."
keywords = ["solid", "git", "http-backend", "nip98", "cgi"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core library: provides the NIP-98 verifier (`auth::nip98::verify_at`)
# and associated `PodError`. No explicit feature needed — the auth
# module lives in the always-on surface.
solid-pod-rs = { path = "../solid-pod-rs", default-features = false }

tokio = { version = "1", features = ["process", "rt", "rt-multi-thread", "io-util", "macros", "sync"] }
bytes = "1"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"

[features]
# When the `git-http-backend` CGI binary is present in the test
# environment, enable the end-to-end integration tests that actually
# spawn the CGI. Unit tests for auth/guard/config always run.
default = []
with-git-binary = []
